--- a/QQ群管理相关/违规记录留档.md
+++ b/QQ群管理相关/违规记录留档.md
@@ -45,4 +45,6 @@ QQ号 | 时间 | 违规原因 | 处理结果 | 违规群 | 备注
 298***482 | 22/2/5 20:28:30 | 引流| 禁言2H | 公测群 | 新年你是第二个主动送人头的
 233***529 | 22/2/7 22:24:00 | 诈骗链接 | 禁言2H | 公测群 |
 247***685 | 22/2/27 07:38:20 | 晒卡 |禁言1D | 公测群 |
+146***825 | 22/7/3  18:06:00 | 引战 | 永久踢出 | 公测群 | 人类迷惑行为
+
 > QQ号打码说明：取前后各3位数字，然后在中间加3个星号，构成九位字符串
